[tool.poetry]
name = "caesar-cipher"
version = "0.1.0"
description = "Caesar cipher encryption and decryption."
authors = ["Igor Ferreira <iferreira.n01@gmail.com>"]
readme = "README.md"
packages = [{include = "caesar_cipher"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
coverage = "^7.2.5"
hypothesis = "^6.75.3"
isort = "^5.12.0"
blue = "^0.9.1"
mypy = "^1.3.0"

[tool.isort]
profile = "black"
line_length = 79

[tool.mypy]
packages = [
    'caesar_cipher'
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
