[tool.poetry]
name = "caesar-cipher"
version = "0.1.0"
description = "Caesar Cipher CLI."
authors = ["Igor Ferreira <iferreira.n01@gmail.com>"]
readme = "README.md"
packages = [{include = "caesar_cipher"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}


[tool.poetry.group.dev.dependencies]
coverage = "^7.2.5"
hypothesis = "^6.75.3"
isort = "^5.12.0"
blue = "^0.9.1"
mypy = "^1.3.0"
taskipy = "^1.11.0"

[tool.isort]
profile = "black"
line_length = 79

[tool.mypy]
packages = [
    'caesar_cipher'
]

[tool.taskipy.tasks]
lint = "isort --check --diff . && blue --check --diff ."
format = "isort . && blue ."
test = "coverage run -m unittest discover"
pre_test = "task lint"
post_test = "coverage report -m && coverage html"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
caesar-cipher = 'caesar_cipher.cli:app'
